--- a/index.html
+++ b/index.html
@@ -76,28 +76,68 @@
     </section>
 
     <section id="familias">
-      <h2>Famílias de Aeronaves</h2>
+     <h2>Famílias de Aviões Comerciais da Airbus</h2>
 
-      <h3>A320</h3>
-      <p>Família de aviões de corredor único, ideal para rotas curtas e médias.</p>
-      <img src="airbus_a320.jpg" alt="Airbus A320">
+<h3>Família A220</h3>
+<p>
+A família A220 é composta por aviões de corredor único, desenvolvidos para voos regionais e de curta a média distância.
+São conhecidos por sua eficiência, baixo consumo de combustível e conforto.
+</p>
+<p><strong>Modelos:</strong> A220-100, A220-300</p>
 
-      <h3>A330</h3>
-      <p>Avião de fuselagem larga, usado principalmente em voos internacionais.</p>
-      <img src="airbus_a330.jpg" alt="Airbus A330">
+<h3>Família A300</h3>
+<p>
+A família A300 foi o primeiro avião bimotor de fuselagem larga do mundo.
+Ela marcou o início da Airbus e foi muito usada em transporte de passageiros e cargas.
+</p>
+<p><strong>Modelos:</strong> A300B1 (protótipo), A300B2, A300B4, A300-600, A300-600R, A300-600ST (Beluga)</p>
 
-      <h3>A350</h3>
-      <p>Design moderno e eficiente para longas distâncias, com tecnologia de ponta em materiais e aerodinâmica.</p>
-      <img src="airbus_a350.jpg" alt="Airbus A350">
+<h3>Família A310</h3>
+<p>
+O A310 é uma versão menor e mais moderna do A300, projetada para rotas de média e longa distância,
+com maior eficiência e alcance.
+</p>
+<p><strong>Modelos:</strong> A310-200, A310-300</p>
 
-      <h3>A380</h3>
-      <p>O maior avião de passageiros do mundo, com dois andares e capacidade para mais de 500 pessoas.</p>
-      <img src="airbus_a380.jpg" alt="Airbus A380">
+<h3>Família A320</h3>
+<p>
+A família A320 é a mais famosa da Airbus. São aviões de corredor único usados em voos curtos e médios,
+muito populares em companhias aéreas do mundo todo.
+</p>
+<p><strong>Modelos:</strong> A318, A319, A319neo, A320, A320neo, A321, A321neo, A321LR, A321XLR</p>
+
+<h3>Família A330</h3>
+<p>
+A família A330 é formada por aviões de fuselagem larga, usados em voos de média e longa distância.
+Ela também possui versões cargueiras e aeronaves especiais como o Beluga.
+</p>
+<p><strong>Modelos:</strong> A330-200, A330-200F, A330-300, A330-800 (neo), A330-900 (neo), A330-743L (BelugaXL)</p>
+
+<h3>Família A340</h3>
+<p>
+O A340 é um avião de longa distância com quatro motores, projetado para voos intercontinentais.
+Hoje não é mais produzido, mas marcou a história da aviação comercial.
+</p>
+<p><strong>Modelos:</strong> A340-200, A340-300, A340-500, A340-600</p>
+
+<h3>Família A350</h3>
+<p>
+A família A350 representa a geração mais moderna de aviões de longa distância da Airbus,
+utilizando materiais avançados e alta eficiência energética.
+</p>
+<p><strong>Modelos:</strong> A350-900, A350-1000</p>
+
+<h3>Família A380</h3>
+<p>
+O A380 é o maior avião comercial de passageiros do mundo, com dois andares completos.
+Foi projetado para rotas de altíssima demanda entre grandes aeroportos.
+</p>
+<p><strong>Modelos:</strong> A380-800</p>
     </section>
 
     <section id="contato">
       <h2>Contato</h2>
-      <p>Para mais informações, envie um e-mail para: <a href="mailto:contato@ciadocaioba.com">contato@ciadocaioba.com</a></p>
+      <p>Para mais informações, envie um e-mail para: <a href="mailto:caioxina210313@gmail.com">caioxina210313@gmail.com</a></p>
     </section>
   </main>
 
