--- a/index.html
+++ b/index.html
@@ -1,149 +1,241 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Cia do Caioba - AIRBUS</title>
-  <meta name="description" content="Cia do Caioba: projetos e conteúdo sobre aviões da Airbus">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: powderblue;
-      color: #333;
-    }
-    header {
-      background: #4CAF50;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-    }
-    nav {
-      background: #333;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      padding: 14px 20px;
-      display: inline-block;
-    }
-    nav a:hover {
-      background: #575757;
-    }
-    main {
-      padding: 20px;
-      max-width: 900px;
-      margin: auto;
-      background: #f4f4f9;
-    }
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 10px 0;
-      margin-top: 20px;
-    }
-    h1 { color: orange; }
-    h2 { color: red; }
-    h3 { color: yellow; }
-    p { color: black; font-size: 18px; }
-    img { max-width: 100%; height: auto; display: block; margin: 10px 0; }
-  </style>
+<meta charset="UTF-8">
+<title>Airbus Database</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Banco de dados dos aviões comerciais da Airbus">
+
+<!-- Chart.js -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<style>
+:root {
+    --bg: #f4f6f8;
+    --text: #333;
+    --primary: #00205b;
+    --card: #ffffff;
+    --border: #d1d5db;
+}
+
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background: var(--bg);
+    color: var(--text);
+}
+
+header {
+    background: var(--primary);
+    color: white;
+    padding: 25px;
+    text-align: center;
+}
+
+nav {
+    margin-top: 10px;
+}
+
+nav a {
+    color: white;
+    margin: 0 12px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+main {
+    max-width: 1200px;
+    margin: auto;
+    padding: 20px;
+}
+
+section {
+    margin-bottom: 60px;
+}
+
+.controls {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 15px;
+}
+
+input, select {
+    padding: 10px;
+    font-size: 16px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    background: var(--card);
+}
+
+th, td {
+    padding: 12px;
+    border: 1px solid var(--border);
+    text-align: center;
+}
+
+th {
+    background: #e5e7eb;
+}
+
+tr:hover {
+    background: rgba(0,0,0,0.05);
+}
+
+canvas {
+    background: white;
+    padding: 15px;
+    margin-top: 30px;
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background: var(--primary);
+    color: white;
+}
+</style>
 </head>
+
 <body>
 
-  <!-- Cabeçalho -->
-  <header>
-    <h1>AIRBUS</h1>
-    <p>Conteúdo sobre aviões da Airbus, organizado por Cia do Caioba</p>
-  </header>
+<header>
+    <h1>✈️ Airbus Database</h1>
+    <p>Aviões comerciais • Motores • Capacidade máxima</p>
+    <nav>
+        <a href="#tabela">Tabela</a>
+        <a href="#graficos">Gráficos</a>
+    </nav>
+</header>
 
-  <!-- Menu de navegação -->
-  <nav>
-    <a href="#sobre">Sobre</a>
-    <a href="#familias">Famílias</a>
-    <a href="#contato">Contato</a>
-  </nav>
+<main>
 
-  <!-- Conteúdo principal -->
-  <main>
-    <section id="sobre">
-      <h2>O que é isso?</h2>
-      <p>A Airbus SE é uma empresa aeroespacial e bélica europeia, fundada em 18 de dezembro de 1970, em Blagnac, no sul da França.</p>
-      <img src="airbus1.jpg" alt="Avião Airbus">
-    </section>
+<!-- ================= TABELA ================= -->
+<section id="tabela">
+    <h2>📋 Lista de Aeronaves</h2>
 
-    <section id="familias">
-     <h2>Famílias de Aviões Comerciais da Airbus</h2>
+    <div class="controls">
+        <input type="text" id="search" placeholder="Buscar modelo...">
+        <select id="familyFilter">
+            <option value="">Todas as famílias</option>
+            <option value="A220">A220</option>
+            <option value="A300">A300</option>
+            <option value="A310">A310</option>
+            <option value="A320">A320</option>
+            <option value="A330">A330</option>
+            <option value="A340">A340</option>
+            <option value="A350">A350</option>
+            <option value="A380">A380</option>
+        </select>
+    </div>
 
-<h3>Família A220</h3>
-<p>
-A família A220 é composta por aviões de corredor único, desenvolvidos para voos regionais e de curta a média distância.
-São conhecidos por sua eficiência, baixo consumo de combustível e conforto.
-</p>
-<p><strong>Modelos:</strong> A220-100, A220-300</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Modelo</th>
+                <th>Família</th>
+                <th>Motores</th>
+                <th>Capacidade Máxima</th>
+            </tr>
+        </thead>
+        <tbody id="tableBody"></tbody>
+    </table>
+</section>
 
-<h3>Família A300</h3>
-<p>
-A família A300 foi o primeiro avião bimotor de fuselagem larga do mundo.
-Ela marcou o início da Airbus e foi muito usada em transporte de passageiros e cargas.
-</p>
-<p><strong>Modelos:</strong> A300B1 (protótipo), A300B2, A300B4, A300-600, A300-600R, A300-600ST (Beluga)</p>
+<!-- ================= GRÁFICOS ================= -->
+<section id="graficos">
+    <h2>📊 Gráficos Interativos</h2>
 
-<h3>Família A310</h3>
-<p>
-O A310 é uma versão menor e mais moderna do A300, projetada para rotas de média e longa distância,
-com maior eficiência e alcance.
-</p>
-<p><strong>Modelos:</strong> A310-200, A310-300</p>
+    <canvas id="capacityChart"></canvas>
+    <canvas id="engineChart"></canvas>
+</section>
 
-<h3>Família A320</h3>
-<p>
-A família A320 é a mais famosa da Airbus. São aviões de corredor único usados em voos curtos e médios,
-muito populares em companhias aéreas do mundo todo.
-</p>
-<p><strong>Modelos:</strong> A318, A319, A319neo, A320, A320neo, A321, A321neo, A321LR, A321XLR</p>
+</main>
 
-<h3>Família A330</h3>
-<p>
-A família A330 é formada por aviões de fuselagem larga, usados em voos de média e longa distância.
-Ela também possui versões cargueiras e aeronaves especiais como o Beluga.
-</p>
-<p><strong>Modelos:</strong> A330-200, A330-200F, A330-300, A330-800 (neo), A330-900 (neo), A330-743L (BelugaXL)</p>
+<footer>
+    <p>Projeto educativo • Criado por Caio • Airbus Database</p>
+</footer>
 
-<h3>Família A340</h3>
-<p>
-O A340 é um avião de longa distância com quatro motores, projetado para voos intercontinentais.
-Hoje não é mais produzido, mas marcou a história da aviação comercial.
-</p>
-<p><strong>Modelos:</strong> A340-200, A340-300, A340-500, A340-600</p>
+<script>
+const aircrafts = [
+    { model: "A220-100", family: "A220", engines: 2, capacity: 135 },
+    { model: "A220-300", family: "A220", engines: 2, capacity: 160 },
 
-<h3>Família A350</h3>
-<p>
-A família A350 representa a geração mais moderna de aviões de longa distância da Airbus,
-utilizando materiais avançados e alta eficiência energética.
-</p>
-<p><strong>Modelos:</strong> A350-900, A350-1000</p>
+    { model: "A300B1", family: "A300", engines: 2, capacity: 300 },
+    { model: "A300B2", family: "A300", engines: 2, capacity: 250 },
+    { model: "A300B4", family: "A300", engines: 2, capacity: 270 },
+    { model: "A300-600", family: "A300", engines: 2, capacity: 270 },
 
-<h3>Família A380</h3>
-<p>
-O A380 é o maior avião comercial de passageiros do mundo, com dois andares completos.
-Foi projetado para rotas de altíssima demanda entre grandes aeroportos.
-</p>
-<p><strong>Modelos:</strong> A380-800</p>
-    </section>
+    { model: "A310-200", family: "A310", engines: 2, capacity: 220 },
+    { model: "A310-300", family: "A310", engines: 2, capacity: 240 },
 
-    <section id="contato">
-      <h2>Contato</h2>
-      <p>Para mais informações, envie um e-mail para: <a href="mailto:caioxina210313@gmail.com">caioxina210313@gmail.com</a></p>
-    </section>
-  </main>
+    { model: "A318", family: "A320", engines: 2, capacity: 132 },
+    { model: "A319ceo", family: "A320", engines: 2, capacity: 160 },
+    { model: "A320neo", family: "A320", engines: 2, capacity: 195 },
+    { model: "A321neo", family: "A320", engines: 2, capacity: 240 },
 
-  <!-- Rodapé -->
-  <footer>
-    <p>&copy; 2025 Cia do Caioba. Todos os direitos reservados.</p>
-  </footer>
+    { model: "A330-300", family: "A330", engines: 2, capacity: 300 },
+    { model: "A350-1000", family: "A350", engines: 2, capacity: 410 },
+    { model: "A380-800", family: "A380", engines: 4, capacity: 853 }
+];
+
+// ---------- TABELA ----------
+const tableBody = document.getElementById("tableBody");
+const searchInput = document.getElementById("search");
+const familyFilter = document.getElementById("familyFilter");
+
+function renderTable() {
+    const text = searchInput.value.toLowerCase();
+    const family = familyFilter.value;
+    tableBody.innerHTML = "";
+
+    aircrafts
+        .filter(a =>
+            a.model.toLowerCase().includes(text) &&
+            (family === "" || a.family === family)
+        )
+        .forEach(a => {
+            tableBody.innerHTML += `
+                <tr>
+                    <td>${a.model}</td>
+                    <td>${a.family}</td>
+                    <td>${a.engines}</td>
+                    <td>${a.capacity}</td>
+                </tr>
+            `;
+        });
+}
+
+searchInput.addEventListener("input", renderTable);
+familyFilter.addEventListener("change", renderTable);
+renderTable();
+
+// ---------- GRÁFICOS ----------
+new Chart(document.getElementById("capacityChart"), {
+    type: "bar",
+    data: {
+        labels: aircrafts.map(a => a.model),
+        datasets: [{
+            label: "Capacidade Máxima de Passageiros",
+            data: aircrafts.map(a => a.capacity)
+        }]
+    }
+});
+
+new Chart(document.getElementById("engineChart"), {
+    type: "pie",
+    data: {
+        labels: aircrafts.map(a => a.model),
+        datasets: [{
+            label: "Quantidade de Motores",
+            data: aircrafts.map(a => a.engines)
+        }]
+    }
+});
+</script>
+
 </body>
 </html>
